# RoboticArm

./: .gitignore  README.md  apresentacao_referencia.md  collision_analysis.py  projeto_grasp_autonomo_ml.txt
TCC/: ROS2docs.txt  TCC_Lucas_Martins.docx  integracao_robo_real.txt  modelo_-_requerimento_de_constituicao_de_banca_2.docx  projeto_grasp_autonomo_ml copy.txt  projeto_grasp_autonomo_ml.txt
covvi/: package.xml  setup.cfg  setup.py
devel/: .catkin  .rosinstall  local_setup.sh
docs/: SDD_grasp_perfection.md
images/: Screencast from 04-28-2026 02:43:52 PM.webm
install/: local_setup.sh  setup.bash  (+3 more)
install/hand_pack/share/hand_pack/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hand_pack/share/hand_pack/config/: hand_controller.yaml
install/hand_pack/share/hand_pack/launch/: combined_launch.py  display.launch.py  start_gazebo_world.py
install/hand_pack/share/hand_pack/urdf/: combined_robot.urdf.xacro  hand.xacro  hj_hand_gazebo.xacro  hj_hand_transmission.xacro  hj_hand_world.urdf.xacro  linear_covvi_hand_gazebo.urdf  linear_covvi_hand_right_scaled.urdf
install/hand_pack/share/hand_pack/worlds/: .ure.wbproj  ure.wbt
src/grasp_ml_pack/: README.md  package.xml  setup.py
src/grasp_ml_pack/config/: pipeline_params.yaml
src/grasp_ml_pack/grasp_ml_pack/: cage_check.py  collision.py  conveyor_controller.py  grasp_executor.py  grasp_planner.py  grasp_quality_net.py  gui_control_node.py  kinematics.py  manual_control_node.py  object_detector.py  pipeline.py  pose_estimator.py  poses.py  teach_pendant.py
src/grasp_ml_pack/grasp_ml_pack/scripts/: generate_training_data.py  train_grasp_model.py
src/grasp_ml_pack/launch/: conveyor_cell.launch.py  grasp_pipeline.launch.py
src/grasp_ml_pack/scripts/: generate_training_data.py  train_grasp_model.py
src/grasp_ml_pack/worlds/: conveyor_cell.world  grasp_experiment.world
(+345 files in other folders)
